Sponsoren-Links gefixt.

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -41,7 +41,7 @@
                     <div class="notiz">Premium-Sponsoren</div>
                     <div class="premiumsponsoren">
                         <figure class="sponsor">
-                            <a href="agile.ruhr">
+                            <a href="https://agile.ruhr">
                                 <img src="assets/images/agileruhr.png" alt="agile ruhr" />
                             </a>
                         </figure>
@@ -49,27 +49,27 @@
                     <div class="notiz">Basis-Sponsoren</div>
                     <div class = "basissponsoren">
                         <figure class="sponsor">
-                            <a href="bambule.de">
+                            <a href="https://bambule.de">
                                 <img src="assets/images/bambule.png" alt="Bambule Webdesign" />
                             </a>
                         </figure>
                         <figure class="sponsor">
-                            <a href="netzkommune.de">
+                            <a href="https://netzkommune.de">
                                 <img src="assets/images/netzkommune.png" alt="netzkommune" />
                             </a>
                         </figure>
                         <figure class="sponsor">
-                            <a href="dotruhr.com">
+                            <a href="https://www.dot.ruhr/">
                                 <img src="assets/images/dotruhr.png" alt="dotruhr" />
                             </a>
                         </figure>
                         <figure class="sponsor">
-                            <a href="rheinschafe.de">
+                            <a href="https://rheinschafe.de">
                                 <img src="assets/images/rheinschafe.png" alt="Rheinschafe" />
                             </a>
                         </figure>
                         <figure class="sponsor">
-                            <a href="expositio.de">
+                            <a href="http://expositio.de">
                                 <img src="assets/images/expositio.png" alt="expositio" />
                             </a>
                         </figure>
