WAZ als Premium.

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -45,6 +45,11 @@
                                 <img src="assets/images/agileruhr.png" alt="agile ruhr" />
                             </a>
                         </figure>
+                        <figure class="sponsor">
+                            <a href="https://waz.de">
+                                <img src="assets/images/waz.png" alt="agile ruhr" />
+                            </a>
+                        </figure>
                     </div>
                     <div class="notiz">Basis-Sponsoren</div>
                     <div class = "basissponsoren">
