Neue Sponsoren GLS und LVQ

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -78,6 +78,16 @@
                                 <img src="assets/images/expositio.png" alt="expositio" />
                             </a>
                         </figure>
+                        <figure class="sponsor">
+                            <a href="https://www.lvq.de/">
+                                <img src="assets/images/lvq.png" alt="LVQ" />
+                            </a>
+                        </figure>
+                        <figure class="sponsor">
+                            <a href="https://gls.de">
+                                <img src="assets/images/glsb.png" alt="GLS Bank" />
+                            </a>
+                        </figure>
                     </div>
                 </section>
                 <section>
