Tickets auf Börse umgestellt, Agenda angefangen

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -92,14 +92,30 @@
                 </section>
                 <section>
                     <h2 id="tickets">TICKETS</h2>
+                    <div class="tickets">
+                        <p class="text">Die Tickets sind alle ausverkauft, Ihr könnt Euch aber über die Tickeltbörse die vorhandenen Tickets weitergeben. Bitte meldet Euch selbst bei den anderen Teilnehmern und schickt uns eine Nachricht an mail@barcamp.ruhr damit wir Tickets umschreiben können.</p>
+                        <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=ticketboerse12#ich_biete" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                    </div>
+<!--
                     <div style="width:99.8%; text-align:left;">
                         <iframe src="https://eventbrite.de/tickets-external?eid=50483900706&ref=etckt" frameborder="0" height="450" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
                         <div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" >
                             <a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="https://www.eventbrite.de/">Von Eventbrite</a>
                         </div>
-                    </div>                
+                    </div> 
+-->                                   
                 </section>
-
+                <section id="agenda" class="reverse">
+                    <h2>Agenda</h2>
+                    <table>
+                        <tr>
+                            <td class="tag">Samstag, 23.3. 2019</td>
+                            <td class="zeit">ab 09:00 Uhr</td>
+                            <td><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Ankommen, Frühstück & Registrierung</td>
+                        </tr>
+                    </table>
+                </section>
                 <section >
                     <h2>Kontakt</h2>
                     <div class="kontakt">
