--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -10,7 +10,7 @@
         <link rel="manifest" href="site.webmanifest">
         <!-- Place favicon.ico in the root directory -->
 
-<!--        <link rel="stylesheet" href="assets/css/normalize.css"> -->
+        <link rel="stylesheet" href="assets/css/normalize.css"> 
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
@@ -90,6 +90,12 @@
                         </figure>
                     </div>
                 </section>
+                <section id="empfang" class="reverse">
+                    <h2>Empfang</h2>
+                    <p>Wir brauchen wie jedes Jahr Eutre Unterstütung am Empfang, ohne Euchgeht es einfach nicht. Schön, das Ihr Euch einbringt. Tragt gerne mit (Spitz-) Namen und/oder Twitter-Handle ein, wann Ihr Euch an den Empfang setzt.</p>
+                    <p>Aufgaben: Besucherlisten abhaken, Lanyards und Zettel ausgeben und Fragen zum BCR und UPH beantworten. Und bei Selfies helfen ;) </p>
+                    <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=empfang12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                </section>
                 <section>
                     <h2 id="tickets">TICKETS</h2>
                     <div class="tickets">
@@ -109,12 +115,64 @@
                     <h2>Agenda</h2>
                     <table>
                         <tr>
-                            <td class="tag">Samstag, 23.3. 2019</td>
+                            <td class="tag">Samstag, 23.3.</td>
                             <td class="zeit">ab 09:00 Uhr</td>
-                            <td><img src="assets/images/spitze.png"></td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
                             <td class="inhalt">Ankommen, Frühstück & Registrierung</td>
                         </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">10:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Vorstellungsrunde & Sessionplanung</td>
+                        </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">ab 11:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Sessions</td>
+                        </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">18:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Sessionplanung Abendsessions</td>
+                        </tr>
                     </table>
+                    <p class="odd">&nbsp;</p>
+                    <table>
+                        <tr>
+                            <td class="tag">Sonntag, 24.3.</td>
+                            <td class="zeit">ab 09:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Ankommen, Frühstück & Registrierung</td>
+                        </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">10:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Sessionplanung</td>
+                        </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">ab 11:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Sessions</td>
+                        </tr>
+                        <tr><td colspan="4" class="odd"></tr>
+                        <tr>
+                            <td class="tag"></td>
+                            <td class="zeit">16:00 Uhr</td>
+                            <td class="spitze"><img src="assets/images/spitze.png"></td>
+                            <td class="inhalt">Abschlusssession,im Anschluss gemeinsames Aufräumen</td>
+                        </tr>
+                    </table>
+
                 </section>
                 <section >
                     <h2>Kontakt</h2>
