--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -92,7 +92,7 @@
                 </section>
                 <section id="empfang" class="reverse">
                     <h2>Empfang</h2>
-                    <p>Wir brauchen wie jedes Jahr Eutre Unterstütung am Empfang, ohne Euchgeht es einfach nicht. Schön, das Ihr Euch einbringt. Tragt gerne mit (Spitz-) Namen und/oder Twitter-Handle ein, wann Ihr Euch an den Empfang setzt.</p>
+                    <p>Wir brauchen wie jedes Jahr Eure Unterstütung am Empfang, ohne Euch geht es einfach nicht. Schön, das Ihr Euch einbringen wollt. Tragt gerne mit (Spitz-) Namen und/oder Twitter-Handle ein, wann Ihr Euch an den Empfang setzt.</p>
                     <p>Aufgaben: Besucherlisten abhaken, Lanyards und Zettel ausgeben und Fragen zum BCR und UPH beantworten. Und bei Selfies helfen ;) </p>
                     <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=empfang12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                 </section>
@@ -169,7 +169,7 @@
                             <td class="tag"></td>
                             <td class="zeit">16:00 Uhr</td>
                             <td class="spitze"><img src="assets/images/spitze.png"></td>
-                            <td class="inhalt">Abschlusssession,im Anschluss gemeinsames Aufräumen</td>
+                            <td class="inhalt">Abschlusssession, im Anschluss gemeinsames Aufräumen</td>
                         </tr>
                     </table>
 
