Last Minute-Sponsoren Swyx und Maera

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -88,6 +88,16 @@
                                 <img src="assets/images/glsb.png" alt="GLS Bank" />
                             </a>
                         </figure>
+                        <figure class="sponsor">
+                            <a href="https://www.swyx.de">
+                                <img src="assets/images/swyx.png" alt="Swyx Solutions AG" />
+                            </a>
+                        </figure>
+                        <figure class="sponsor">
+                            <a href="https://maera.de/?utm_source=barcampruhr19">
+                                <img src="assets/images/maera.png" alt="Maera" />
+                            </a>
+                        </figure>
                     </div>
                 </section>
                 <section id="empfang" class="reverse">
