--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -36,6 +36,15 @@
                 <div id="subline">
                     <h1>23.-24. März 2019 - UNPERFEKTHAUS ESSEN- #bcruhr12</h1>
                 </div>
+<!--                
+                <section>
+                    <h2 id="tickets">Sessionboard</h2>
+                    <div class="tickets">
+                        <p class="text"></p>
+                        <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=sessionboard12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                    </div>
+                </section>
+-->
                 <section>
                     <h2>Unsere Sponsoren</h2>
                     <div class="notiz">Premium-Sponsoren</div>
@@ -106,12 +115,6 @@
                     <p>Aufgaben: Besucherlisten abhaken, Lanyards und Zettel ausgeben und Fragen zum BCR und UPH beantworten. Und bei Selfies helfen ;) </p>
                     <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=empfang12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                 </section>
-                <section>
-                    <h2 id="tickets">TICKETS</h2>
-                    <div class="tickets">
-                        <p class="text">Die Tickets sind alle ausverkauft, Ihr könnt Euch aber über die Tickeltbörse die vorhandenen Tickets weitergeben. Bitte meldet Euch selbst bei den anderen Teilnehmern und schickt uns eine Nachricht an mail@barcamp.ruhr damit wir Tickets umschreiben können.</p>
-                        <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=ticketboerse12#ich_biete" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
-                    </div>
 <!--
                     <div style="width:99.8%; text-align:left;">
                         <iframe src="https://eventbrite.de/tickets-external?eid=50483900706&ref=etckt" frameborder="0" height="450" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
