--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -41,7 +41,7 @@
                     <h2 id="tickets">Sessionboard</h2>
                     <div class="tickets">
                         <p class="text"></p>
-                        <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=sessionboard12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                        <iframe src=https://www.barcamp.ruhr/wiki/doku.php?id=sessionboardso12#sonntag vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                     </div>
                 </section>
 
