--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -36,7 +36,7 @@
                 <div id="subline">
                     <h1>23.-24. März 2019 - UNPERFEKTHAUS ESSEN- #bcruhr12</h1>
                 </div>
-    
+<!--    
                 <section>
                     <h2 id="tickets">Sessionboard</h2>
                     <div class="tickets">
@@ -44,7 +44,14 @@
                         <iframe src=https://www.barcamp.ruhr/wiki/doku.php?id=sessionboardso12#sonntag vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                     </div>
                 </section>
-
+-->                
+                <section>
+                    <h2 id="tickets">Berichte</h2>
+                    <div class="tickets">
+                        <p class="text">Wir sammen Eure Berichte, die wir finden, hier im Wiki, wenn Ihr was habt, gerne selbbst eintragen, wenn wir was übersehen, gerne melden.</p>
+                        <iframe src=https://www.barcamp.ruhr/wiki/doku.php?id=berichte12berichte_links_und_fotos_zum_barcamp_ruhr_12 vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                    </div>
+                </section>
                 <section>
                     <h2>Unsere Sponsoren</h2>
                     <div class="notiz">Premium-Sponsoren</div>
@@ -109,12 +116,14 @@
                         </figure>
                     </div>
                 </section>
+<!--                
                 <section id="empfang" class="reverse">
                     <h2>Empfang</h2>
                     <p>Wir brauchen wie jedes Jahr Eure Unterstütung am Empfang, ohne Euch geht es einfach nicht. Schön, das Ihr Euch einbringen wollt. Tragt gerne mit (Spitz-) Namen und/oder Twitter-Handle ein, wann Ihr Euch an den Empfang setzt.</p>
                     <p>Aufgaben: Besucherlisten abhaken, Lanyards und Zettel ausgeben und Fragen zum BCR und UPH beantworten. Und bei Selfies helfen ;) </p>
                     <iframe src="https://www.barcamp.ruhr/wiki/doku.php?id=empfang12#samstag" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                 </section>
+-->                
 <!--
                     <div style="width:99.8%; text-align:left;">
                         <iframe src="https://eventbrite.de/tickets-external?eid=50483900706&ref=etckt" frameborder="0" height="450" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
