Typo im Link raus

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -49,7 +49,7 @@
                     <h2 id="tickets">Berichte</h2>
                     <div class="tickets">
                         <p class="text">Wir sammen Eure Berichte, die wir finden, hier im Wiki, wenn Ihr was habt, gerne selbst eintragen, wenn wir was übersehen, gerne melden.</p>
-                        <iframe src=https://www.barcamp.ruhr/wiki/doku.php?id=berichte12berichte_links_und_fotos_zum_barcamp_ruhr_12 vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
+                        <iframe src=https://www.barcamp.ruhr/wiki/doku.php?id=berichte12#berichte_links_und_fotos_zum_barcamp_ruhr_12 vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true" width="100%" height="668" frameborder="0"></iframe>
                     </div>
                 </section>
                 <section>
